[package]
name = "test-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.1", features = ["full"]}
tokio-util = {version = "0.7.4", features = ["codec"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio-serde = { version = "0.8", features = ["json"] }
futures = {version = "*"}
tokio-stream = {version = "*"}